language/move-prover/tests/sources/functional/pure_function_call_incorrect.exp
Move prover returns: exiting with model building errors
error: calling impure function `TestPureFun::init` is not allowed

    ┌── tests/sources/functional/pure_function_call_incorrect.move:32:20 ───
    │
 32 │         aborts_if !init(account);
    │                    ^^^^^^^^^^^^^
    │
    = impure function `TestPureFun::init(&signer): bool`

error: calling impure function `Vector::pop_back` is not allowed

    ┌── tests/sources/functional/pure_function_call_incorrect.move:56:27 ───
    │
 56 │         ensures result == Vector::pop_back(old(v));
    │                           ^^^^^^^^^^^^^^^^^^^^^^^^
    │
    = impure function `Vector::pop_back(&mut vector<#0>): #0`

error: calling impure function `TestPureFun::impure_f_2` is not allowed

    ┌── tests/sources/functional/pure_function_call_incorrect.move:62:13 ───
    │
 62 │             impure_f_2()
    │             ^^^^^^^^^^^^
    │
    = impure function `TestPureFun::impure_f_2(): u64`
